# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: alu.h  bus.h  decoder.h  lsb.h  memory.h  param.h  pred.h  regfile.h  rob.h  rss.h  simulator.h  state.h  utils.h
interpreter/: CMakeLists.txt  main.cpp
src/: alu.cpp  decoder.cpp  lsb.cpp  memory.cpp  pred.cpp  regfile.cpp  rob.cpp  rss.cpp  simulator.cpp  utils.cpp
